--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     <img src="./static/gifs/contact_grasp.gif" class="interpolation-image-upper" alt="Surface Following">
                     <p class="is-bold">Light grasp</p>
                   </div>
-                  <div class="middle-img-container">
+                  <div class="core-img-container">
                     <img src="./static/gifs/good_grasp.gif" class="interpolation-image-upper" alt="Surface Following">
                     <p class="is-bold">Adaptive policy</p>
                   </div>
