--- a/index.html
+++ b/index.html
@@ -264,14 +264,12 @@
  
             <div class="container is-max-desktop">
               
-              <div class="newnew-section-body">
+              <div class="upper-section-body">
                   <!-- Surface Following GIF -->
                   <div class="middle-img-container">
                       <img src="./static/gifs/3000.gif" class="interpolation-image-upper" alt="Surface Following">
                       <p class="is-bold">E=0.30e3</p>
                   </div>
-          
-                  <!-- Box Opening GIF -->
                   <div class="middle-img-container">
                       <img src="./static/gifs/6682.gif" class="interpolation-image-upper" alt="Box Opening">
                       <p class="is-bold">E=0.66e3</p>
