--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         <div class="content has-text-justified">
           <p>
-            Real-world box opening with trajectories optimized with different system identification settings.  We use different Young's modulus E values (0.30e3, 0.66e3, 1.00e4, 2.00e4, 4.00e4 from left to right, while E = 0.37e3 from our system identificaiton) to optimzed trajectries in simulation, and show that when E becomes far from our system id result, the optimized trajectory fails to directly transfer to the real world.
+            Real-world box opening with the trajectories optimized in simulation from our system idenfied parameters (a success) and baseline parameters (a failure).
           </p>
         </div>
         <!-- Interpolating. -->
@@ -267,17 +267,9 @@
               <div class="upper-section-body">
                   <!-- Surface Following GIF -->
                   <div class="middle-img-container">
-                      <img src="./static/gifs/3000.gif" class="interpolation-image-upper" alt="Surface Following">
-                      <p class="is-bold">E=0.30e3</p>
+                      <img src="./static/gifs/278_1700264468.gif" class="interpolation-image-upper" alt="Surface Following">
+                      <p class="is-bold">E=0.37e3 (SysID)</p>
                   </div>
-                  <div class="middle-img-container">
-                      <img src="./static/gifs/6682.gif" class="interpolation-image-upper" alt="Box Opening">
-                      <p class="is-bold">E=0.66e3</p>
-                  </div>
-                  <div class="middle-img-container">
-                    <img src="./static/gifs/10000.gif" class="interpolation-image-upper" alt="Box Opening">
-                    <p class="is-bold">E=1.00e4</p>
-                </div>
                 <div class="middle-img-container">
                   <img src="./static/gifs/40000.gif" class="interpolation-image-upper" alt="Box Opening">
                   <p class="is-bold">E=4.00e4 (failed)</p>
