--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2403.08716"
                    class="external-link button is-normal is-rounded is-dark disabled-link">
                   <span class="icon">
-                      <i class="ai ai-arxiv"></i>
+                      <i class="fab fa-arxiv"></i>
                   </span>
                   <span>arXiv (Soon)</span>
                 </a>
