--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
               </span>
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2403.08716"
-                   class="external-link button is-normal is-rounded is-dark disabled-link">
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-arxiv"></i>
                   </span>
-                  <span>arXiv (Soon)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Video Link. -->
