--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a href="https://arxiv.org/abs/2403.08716"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fab fa-arxiv"></i>
+                      <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
